# mcp-assistant

./: .env.example  .gitignore  README.md  package-lock.json  package.json  run.ps1
agent-backend/: .env.example  README.md  agents.py  build.ps1  config.py  llm_client.py  main.py  mcp_config.py  mcp_pool.py  mcp_servers.json  mcp_tools.py  pipeline.py  requirements.txt  sse.py
agent-backend/scripts/: dev_stub_mcp_server.py
agent-backend/tests/: test_mcp_server_routes.py
client/: .env.local.example  CLAUDE.local.md  README.md
client/app/: globals.css  layout.tsx  page.tsx
client/app/servers/: page.tsx
client/components/: AddServerModal.tsx  CommandForm.tsx  ConversationSidebar.tsx  ConversationTurn.tsx  ProgressLog.tsx  ResultMessage.tsx
client/hooks/: useCommandStream.ts  useConversations.ts  useMcpServers.ts
client/lib/: agentClient.ts  conversationStore.ts  mcpServers.ts  sseClient.ts  types.ts
mcp-server/: README.md  build.ps1  folders.py  media.py  processes.py  programs.py  requirements-build.txt  requirements.txt  server.py  youtube.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
