[package]
name = "mcp-assistant"
version = "0.1.0"
description = "MCP Assistant desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
getrandom = "0.2"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
name = "mcp-assistant"
path = "src/main.rs"
